# Django_prod_hw

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/: forms.py
